cmake_minimum_required(VERSION 3.20)
project(brainfk LANGUAGES CXX VERSION 0.0.6)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)
find_package(Threads REQUIRED)

set(CMAKE_INSTALL_PREFIX "/")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Werror")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g -DNDEBUG")
set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})

string(RANDOM LENGTH 1 ALPHABET "123456789" PRNG_SEED_PREFIX)
string(RANDOM LENGTH 5 ALPHABET "0123456789" PRNG_SEED_SUFFIX)
set(PRNG_SEED "${PRNG_SEED_PREFIX}${PRNG_SEED_SUFFIX}")
message(NOTICE "PRNG_SEED = ${PRNG_SEED}")

enable_testing()
add_subdirectory(src)
include(CPack)
